/* $Id: changelog,v 1.1700 2001-09-27 13:14:53 phaller Exp $ */

 2001-09-27: Patrick Haller <patrick.haller@innotek.de>
    - USER32:   o partial implementation of SendInput()

 2001-09-26: knut st. osmundsen <kosmunds@csc.com>
    - Win32k:   o Create development branch 'splittup' which in the
                  splittup of win32k is being implemented.
                o BTW. I think I've found the jfs/fat32 + win32k problem.
                  I left some dirty readonly heap pages behind...
                  That is corrected in the splittup.
    - Some Makefiles:
                o Corrected the file header to state correct dllname.
                  Ye][ow, which is doing some documentation stuff on the Odin32,
                  pointed this out this for me.

 2001-09-26: Patrick Haller <patrick.haller@innotek.de>
    - ODINWRAP: o fixed FNEPILOGUE position
      (MISC)    o added support for calldepth tracing
    - OLE32:    o fixed wrong prototype in regsvr32.cpp

 2001-09-25: Sander van Leeuwen <sandervl@xs4all.nl>
    - COMCTL32: o Wine updates (MRU functions)
    - SHELL32:  o Wine updates (SHAddToRecentDocs)
    - DDRAW/ADVAPI32: Added makefiles for building library with obj files

 2001-09-24: Sander van Leeuwen <sandervl@xs4all.nl>
    - DDRAW:    o Set screen resolution + bpp of primary surface to those
                  of the PM desktop. (used to default to 640x480x8bpp)

 2001-09-24: Patrick Haller <patrick.haller@innotek.de>
    - USER32:   o added ODINWRAP debug tracing support to WINKEYBOARD.CPP

 2001-09-23: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   o MDI bugfix: set active child to 0 when last one is destroyed
                  (fixes crash when closing mdi window in odinapp)
    - GDI32:    o DIB Section sync bugfix; GpiQueryBitmapBits fails
                  when cbImage is too small (compressed images only)
                  This used to work. Maybe related to new SDD version.